<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context="group7.tcss450.uw.edu.challengeapp.LogInFragment"
    android:background="@drawable/trey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_textView"
        android:textSize="@dimen/log_in_textView_size"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/display_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/randomButton"
            android:text="@string/randomButton"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:background="@drawable/customborder"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/randomButton"
            android:id="@+id/spacer_1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recentButton"
            android:layout_below = "@+id/spacer_1"
            android:text="@string/recentButton"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:background="@drawable/customborder"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/recentButton"
            android:id="@+id/spacer_2"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/specificButton"
            android:text="@string/targetButton"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_below = "@+id/spacer_2"
            android:layout_centerHorizontal="true"
            android:background="@drawable/customborder"/>



    </RelativeLayout>

</RelativeLayout>
