<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context="group7.tcss450.uw.edu.challengeapp.SpecificFragment"
    android:background="@drawable/trey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specific_text"
        android:textSize="@dimen/log_in_textView_size"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/specific_textview"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/show_id_hint"
            android:textColorHint="@color/white"
            android:layout_gravity="center"
            android:ems="10"
            android:id="@+id/show_id_edittext"
            android:background="@drawable/customborder"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fire_specific_button"
            android:text="@string/fire_specific"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/customborder"/>

    </LinearLayout>

</RelativeLayout>
